--- a/nbs/Validation.ipynb
+++ b/nbs/Validation.ipynb
@@ -12,9 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import itertools\n",
@@ -27,9 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import opt_mo"
@@ -38,9 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -50,9 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "font = {'size'   : 15,\n",
@@ -63,9 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def play_match(player, opponent, repetitions=200):\n",
@@ -83,9 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ps = itertools.product(*[np.linspace(0, 1, num=4)  for _ in range(4)])"
@@ -94,9 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "qs = [(1/3, 1/3 , 1/3, i) for i in np.linspace(0, 1, 20)]"
@@ -104,10 +90,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "count = 0\n",
@@ -124,10 +108,10 @@
     "    \n",
     "    plt.figure(figsize=(9, 7))\n",
     "    plt.plot(range(len(theoritical)), theoritical, linestyle='-', color='maroon', linewidth=2,\n",
-    "             zorder=1, label='theoretical')\n",
+    "             zorder=1, label='$u_q(p)$')\n",
     "    plt.scatter(range(len(simulated)), simulated, marker='o', s=120, color='darkgreen', zorder=2,\n",
-    "               label='simulated', linewidth='2')\n",
-    "    plt.title(r'p={}'.format(title))\n",
+    "               label='$U_q(p)$', linewidth='2')\n",
+    "    plt.title(r'$p={}$'.format(title))\n",
     "    plt.legend()\n",
     "\n",
     "    plt.ylabel(r'$u_q(p)$')\n",
