Last tweaks in tility against memory one players
Fixes plots, Theorem 2 and discuss the validation
though Stewart and Plotkin's tournament. Table
with results still need to be added.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -259,3 +259,11 @@ url="https://doi.org/10.1007/978-1-4613-9092-3_2"
     number = {12},
     doi = {10.1371/journal.pone.0188046}
 }
+
+% Linear Algebra book
+@book{kepner2011,
+  title={Graph algorithms in the language of linear algebra},
+  author={Kepner, Jeremy and Gilbert, John},
+  year={2011},
+  publisher={SIAM}
+}
