re write best response section
This section has been decicaded to best responses
against a group and a signle memory one strategy.

The structure (for most) has been discussion, lemma, proof
and empirical results.

Things to consider are:

- concavity. Is the sum of non concave functions always non concave
- proofs. Some lemmas follow from a lemma with a proof. Do I need
to add proofs for these as well.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -267,3 +267,31 @@ url="https://doi.org/10.1007/978-1-4613-9092-3_2"
   year={2011},
   publisher={SIAM}
 }
+
+% Lagrange multipliers
+@book{bertsekas2014,
+  title={Constrained optimization and Lagrange multiplier methods},
+  author={Bertsekas, Dimitri P},
+  year={2014},
+  publisher={Academic press}
+}
+
+% Karush-Kuhn-Tucker
+@article{Giorgi2016,
+ author = {Giorgi, Giorgio and Jim{\'e}nez, Bienvenido and Novo, Vicente},
+ title = {Approximate Karush---Kuhn---Tucker Condition in Multiobjective Optimization},
+ journal = {J. Optim. Theory Appl.},
+ issue_date = {October   2016},
+ volume = {171},
+ number = {1},
+ month = oct,
+ year = {2016},
+ issn = {0022-3239},
+ pages = {70--89},
+ numpages = {20},
+ url = {http://dx.doi.org/10.1007/s10957-016-0986-y},
+ doi = {10.1007/s10957-016-0986-y},
+ acmid = {3001290},
+ publisher = {Plenum Press},
+ address = {New York, NY, USA},
+} 
