--- a/bibliography.bib
+++ b/bibliography.bib
@@ -295,3 +295,82 @@ url="https://doi.org/10.1007/978-1-4613-9092-3_2"
  publisher = {Plenum Press},
  address = {New York, NY, USA},
 } 
+
+% bayesian optimisation
+@misc{Head2018,
+  author       = {Tim Head and
+                  MechCoder and
+                  Gilles Louppe and
+                  Iaroslav Shcherbatyi and
+                  fcharras and
+                  Zé Vinícius and
+                  cmmalone and
+                  Christopher Schröder and
+                  nel215 and
+                  Nuno Campos and
+                  Todd Young and
+                  Stefano Cereda and
+                  Thomas Fan and
+                  rene-rex and
+                  Kejia (KJ) Shi and
+                  Justus Schwabedal and
+                  carlosdanielcsantos and
+                  Hvass-Labs and
+                  Mikhail Pak and
+                  SoManyUsernamesTaken and
+                  Fred Callaway and
+                  Loïc Estève and
+                  Lilian Besson and
+                  Mehdi Cherti and
+                  Karlson Pfannschmidt and
+                  Fabian Linzberger and
+                  Christophe Cauet and
+                  Anna Gut and
+                  Andreas Mueller and
+                  Alexander Fabisch},
+  title        = {scikit-optimize/scikit-optimize: v0.5.2},
+  month        = mar,
+  year         = 2018,
+  doi          = {10.5281/zenodo.1207017},
+  url          = {https://doi.org/10.5281/zenodo.1207017}
+}
+@InProceedings{Mokus1978,
+author="Mo{\v{c}}kus, J.",
+editor="Marchuk, G. I.",
+title="On bayesian methods for seeking the extremum",
+booktitle="Optimization Techniques IFIP Technical Conference Novosibirsk, July 1--7, 1974",
+year="1975",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="400--404",
+isbn="978-3-540-37497-8"
+}
+@article{Jones2001,
+  title={A taxonomy of global optimization methods based on response surfaces},
+  author={Jones, Donald R},
+  journal={Journal of global optimization},
+  volume={21},
+  number={4},
+  pages={345--383},
+  year={2001},
+  publisher={Springer}
+}
+@inproceedings{snoek2012,
+  title={Practical bayesian optimization of machine learning algorithms},
+  author={Snoek, Jasper and Larochelle, Hugo and Adams, Ryan P},
+  booktitle={Advances in neural information processing systems},
+  pages={2951--2959},
+  year={2012}
+}
+
+% Differentional evolution
+@article{Storn1997,
+  title={Differential evolution--a simple and efficient heuristic for global optimization over continuous spaces},
+  author={Storn, Rainer and Price, Kenneth},
+  journal={Journal of global optimization},
+  volume={11},
+  number={4},
+  pages={341--359},
+  year={1997},
+  publisher={Springer}
+}
